--- a/ex01-express/package.json
+++ b/ex01-express/package.json
@@ -15,8 +15,9 @@
   "author": "Denis Barbosa",
   "license": "MIT",
   "dependencies": {
-    "express": "^5.1.0",
-    "dotenv": "^17.2.1"
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
